# cpm-parameter-selector

./: .gitignore  README.md  pyproject.toml
cpm/: __init__.py  config.py  cpm_core.py  loader.py  param_selector.py  visualize.py
scripts/: run_param_search.py
tests/: conftest.py  test_cpm.py
