[project]
name = "cpm-param-selector"
version = "0.1.0"
description = "Automatic parameter selection for Critical Point Model (CPM) in financial time series"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
